[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.13"
solie = { path = "solie/", develop = true }

[tool.poetry.dev-dependencies]
ruff = "*"
pyright = "*"
pygount = "*"

[tool.ruff]
extend-select = ["N", "I", "T20"]
exclude = ["solie/solie/user_interface.py"]

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["solie/solie/user_interface.py"]
