[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9,<3.13"
solie = { path = "package/", develop = true }

[tool.poetry.dev-dependencies]
ruff = "*"
pyright = "*"
pygount = "*"

[tool.ruff]
extend-select = ["N", "I", "T20"]
exclude = ["package/solie/user_interface.py"]

[tool.pyright]
typeCheckingMode = "basic"
ignore = ["package/solie/user_interface.py"]
