[project]
name = "workspace"
version = "0.1.0"
dependencies = ["pyright~=1.1.392", "ruff~=0.9.3", "solie", "usage"]

[tool.uv.workspace]
members = ["documentation", "package", "example"]

[tool.uv.sources]
solie = { workspace = true }
usage = { workspace = true }

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = true
ignore = ["package/solie/window/compiled.py"]
extraPaths = ["package"]

[tool.ruff.lint]
extend-select = ["N", "I", "T20", "RUF", "SLF", "INP", "ASYNC"]
exclude = ["package/solie/window/compiled.py"]
