[tool.poetry]
name = "documentation"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.9"
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.9"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-glightbox = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
