[project]
name = "solie"
version = "8.7.4"
description = "GUI trading bot designed for targeting the futures markets of Binance"
authors = [{ name = "Cunarist", email = "cunarist@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy~=1.26.2",
    "pandas~=1.5.3",
    "pandas-stubs~=1.5.3",
    "scipy~=1.11.3",
    "pyside6~=6.7.0",
    "pyqtgraph~=0.13.7",
    "aiohttp~=3.9.3",
    "faust-cchardet~=2.1.19",
    "aiodns~=3.1.1",
    "aiofiles~=23.2.1",
    "apscheduler~=3.10.4",
    "pygments~=2.17.1",
    "yapf~=0.32.0",
    "getmac~=0.8.3",
    "pandas-ta==0.3.14b",
    "time-machine~=2.13.0",
    "xdialog~=1.1.1",
    "dataclasses-json~=0.6.4",
    "setuptools~=75.6.0",
    "typing-extensions~=4.12.2",
    "qasync~=0.27.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
