[project]
name = "solie"
version = "9.2.0"
description = "GUI trading bot designed for targeting the futures markets of Binance"
authors = [{ name = "Cunarist", email = "cunarist@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "numpy~=2.2.6",
    "pandas~=2.3.2",
    "pandas-stubs~=2.3.2",
    "scipy~=1.16.3",
    "pyside6~=6.8.2",
    "pyqtgraph~=0.13.7",
    "aiohttp~=3.9.3",
    "faust-cchardet~=2.1.19",
    "aiodns~=3.1.1",
    "aiofiles~=23.2.1",
    "aioshutil~=1.6",
    "apscheduler~=3.10.4",
    "pygments~=2.17.1",
    "yapf~=0.32.0",
    "getmac~=0.8.3",
    "pandas-ta==0.4.71b0",
    "time-machine~=2.13.0",
    "xdialog~=1.1.1",
    "setuptools~=75.6.0",
    "pydantic~=2.10.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
